dark mode toggle scrolls up on desktop, fixed on mobile

--- a/playbook-website/app/javascript/site_styles/_site-style.scss
+++ b/playbook-website/app/javascript/site_styles/_site-style.scss
@@ -16,11 +16,23 @@ body {
 }
 
 .pb--page {
-  &--dark-mode-toggle {
+  &--dark-mode-toggle-desktop {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: $space_lg;
+    @include break_at($nav_breakpoint) {
+      display: none;
+    }
+  }
+  &--dark-mode-toggle-mobile {
     position: fixed;
     top: $space_lg;
     right: $space_xl;
+    display: none;
     z-index: 100;
+    @include break_at($nav_breakpoint) {
+      display: block;
+    }
   }
   &--content {
     min-height: calc(100vh - 89px);
